     when renaming a program to "*-old" or promoting a "*-new" into the
     stable name as a default implementation). Drivers united by `main.c`
     framework introduced a `upsdrv_tweak_prognames()` hook method to let
     them manipulate the array of `prognames[]` aliases. [PR #3101]

 - `asem`, `bestfortress`, `bestuferrups`, `bicker_ser`, `everups`, `metasys`,
   `masterguard`, `mge-utalk`, `oneac`, `phoenixcontact_modbus` driver updates:
   * Moved code to align with NUT driver architecture, so `upsdrv_initups()`
     would focus on preparing communications, and `upsdrv_initinfo()` would
     actually talk to the device and set initial critical data values. [#1962]

 - `nutdrv_qx` driver updates:
   * Define an internal `QX_FLAG_MAPPING_HANDLED` to check if the subdriver
     code (mapping table) and the data found from device walk sit together
     well -- namely, that we successfully use reasonably many of the existing
     mappings. Suggest how user can help improve the driver if too few data
     points were seen. [PR #3095]

 - `powerp-bin` and `powerp-txt` driver updates:
   * Their `upsdrv_initinfo()` methods did not explicitly reference the
     `INSTCMD` and `SETVAR` handler methods (it is unknown whether this
     actually broke anything, or the needed values were deduced from
     subdriver definition then). For consistency, these pointers are now
     assigned. [#1962]

 - `snmp-ups` driver updates:
   * Define an internal `SU_FLAG_MAPPING_HANDLED` to check if the subdriver
     code (mapping table) and the data found from device walk sit together
     well -- namely, that we successfully use reasonably many of the existing
     mappings. Suggest how user can help improve the driver if too few data
     points were seen, or if the `mibs=auto` detection only found the fallback
     IETF mapping. [PR #3095]

 - `tripplite_usb` driver updates:
   * Added support for Tripplite protocol 3017 (mostly ASCII). [issue #2258,
     PR #3093]
